--- a/index.html
+++ b/index.html
@@ -5,27 +5,104 @@
   <meta charset="UTF-8">
   <title>Train Schedule</title>
   <meta name="viewport" content="width=device-width">
+
+  <!-- Bootstrap/CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <!-- Bootstrap js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- JQuery js -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+  <!-- Firebase References -->
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
+  <!-- Moment.js Reference -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
+  <style>
+     #employee-table th, td {
+       display: inline-block; 
+       width: 16.575%;
+     } 
+  </style>
 </head>
 
 <body>
 
-  <h1>Train Schedule goes here</h1>
-  <div></div>
-  <!-- <form>
-      <span id="add_instrument">
-         <input id="instrument_text" type="text">
-         <input id="submit" value="add instrument" type="submit"></span>
-    </form>  
-  <div id="gif_display"></div>
-   -->
-  <body>
+  <div class="container">
 
-  <!-- link to jquery -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Jumbotron -->
+    <div class="jumbotron" style="background-color: rgb(42, 43, 97); color: white">
+      <h1 class="text-center">Train Schedule</h1>
+      <h3 class="text-center"></h3>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-12">
+
+        <div class="card mb-4">
+          <div class="card-header">New Lines</div>
+          <div class="card-body">
+            <table class="table table-sm table-hover" id='employee-table'>
+              <thead>
+                <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Destination</th>
+                  <th scope="col">Start Date</th>
+                  <th scope="col">Months Worked</th>
+                  <th scope="col">Monthly Rate ($)</th>
+                  <th scope="col">Total Billed ($)</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <!-- Add Employee  -->
+        <div class="card mb-4">
+          <div class="card-header">Add Employee</div>
+          <div class="card-body">
+
+            <!-- Entry Form -->
+            <form>
+              <div class="form-group">
+                <label for="employee-name-input">Employee Name</label>
+                <input class="form-control" id="employee-name-input" placeholder="Jane Doe" type="text">
+              </div>
+              <div class="form-group">
+                <label for="role-input">Role</label>
+                <input class="form-control" id="role-input" placeholder="CEO" type="text">
+              </div>
+              <div class="form-group">
+                <label for="start-input">Start Date (MM/DD/YYYY)</label>
+                <input class="form-control" id="start-input" placeholder="01/08/1989" type="text">
+              </div>
+              <div class="form-group">
+                <label for="rate-input">Monthly Rate</label>
+                <input class="form-control" id="rate-input" placeholder="200000" type="text">
+              </div>
+              <button class="btn btn-primary"style="background-color: rgb(42, 43, 97); color: white" id="add-employee-btn">Submit</button>
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <!-- link to js -->
-  <script src="assets/javascript/gif_app.js"></script>
+  <script src="assets/javascript/train_app.js"></script>
 
 </body>
 
