--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </div>
               <div class="form-group">
                 <label for="first-run-input">First Run (Military Time)</label>
-                <input class="form-control" id="first-run-input" type="number">
+                <input class="form-control" id="first-run-input" type="text">
               </div>
               <div class="form-group">
                 <label for="frequency-input">Frequency (min)</label>
